{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "dfc74b63-269b-4dea-97bd-c96427298ab3",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "64e31ea9-9e6b-48c6-9d5f-ccebfc57ef06",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "5c3fa9a1-6d20-4592-aa77-45ebd8e4ceb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "647f11de-25eb-461e-944d-ed10844215c7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24f2d303-f04c-4509-8b20-56659001422a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e7cb95b-8dab-407f-9c25-e5d2d881f67d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32cf788a-a045-4705-a506-6b1b534f08c8",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse and Keyboard",
            "bindingGroup": "Mouse and Keyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}